# StudyBuddy

./: .env.example  .env.production.example  .env.production.local.example  .eslintignore  .eslintrc.json  .gitignore  AI_FEATURES.md  AI_MODEL_SELECTOR.md  ANDROID_SETUP.md  API_URL_FIX.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUTH_FIXES_SUMMARY.md  AUTH_REDESIGN.md  AUTH_SETUP.md  BACKEND_DEPLOYMENT.md  BUDDY_CHAT.md  CHANGELOG.md  CHAT_ALL_FEATURES_WORKING.md  CHAT_DELETE_DIALOG_ADDED.md  CHAT_EDIT_DELETE_FIXED.md  CHAT_FEATURES_STATUS.md  CHAT_OWNERSHIP_VERIFIED.md  CHAT_SYSTEM_READY.md  CLEANUP_COMPLETE.md  CLIENT_SERVER_ARCHITECTURE.md  CLOUDINARY_SETUP.md  COCKROACHDB_SETUP.md  CODEBASE_CLEANUP_COMPLETE.md  CODEBASE_CLEANUP_PLAN.md  COMMIT_SUMMARY.md  CONNECTION_TEST.md  CONNECTION_TEST_RESULTS.md  CORS_SETUP.md  COST_ESTIMATION.md  CRON_QUICK_SETUP.md  CURRENT_SETUP.md  DATABASE_ARCHITECTURE.md  DATABASE_CLEANUP_GUIDE.md  DATABASE_SETUP.md  (+136 more)
server/: Cargo.toml  app.js  app.ts  index.js  index.ts
server/config/: cloudinary.ts  passport-config.ts  passport.js  passport.ts
server/db/: client.ts  collections.ts
server/lib/: cache.js  cache.ts  db.js  db.ts  email.js  email.ts  emailValidator.ts  geminiClient.ts  groqClient.js  groqClient.ts  jwt.ts  keepAlive.ts  mongodb.js  mongodb.ts  outbox.ts  prisma.ts  rateLimiter.js  rateLimiter.ts  redis.js  redis.ts
server/middleware/: admin.js  admin.ts  advancedRateLimiting.js  advancedRateLimiting.ts  auth.js  auth.ts  authorization.js  authorization.ts  examples.js  examples.ts  index.js  index.ts  metrics.js  (+8 more)
(+403 files in other folders)
